# pyTEMlib

./: .buildinfo  .gitignore  .pyTEMlib.files.pkl  .travis.yml  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  README.rst  Untitled1.ipynb  _config.yml  _toc.yml  about.html  api.rst  contact.html  credits.html  eels_dialog_utilities.py  genindex.html  index.html  install.html  installation.md  intro.md  makefile  myst.yml  objects.inv  py-modindex.html  pyproject.toml  python  revisions.html  search.html  searchindex.js  setup.cfg  setup.py
.doctrees/: about.doctree  contact.doctree  credits.doctree  index.doctree  install.doctree  revisions.doctree
_autosummary/: pyTEMlib.KinsCat.Zuo_fig_3_18.html  pyTEMlib.KinsCat.ball_and_stick.html  pyTEMlib.KinsCat.check_sanity.html  pyTEMlib.KinsCat.circles.html  pyTEMlib.KinsCat.diffraction_pattern.html  pyTEMlib.KinsCat.example.html  pyTEMlib.KinsCat.feq.html  pyTEMlib.KinsCat.get_rotation_matrix.html  pyTEMlib.KinsCat.get_symmetry.html  pyTEMlib.KinsCat.get_wavelength.html  pyTEMlib.KinsCat.html  pyTEMlib.KinsCat.kinematic_scattering.html  pyTEMlib.KinsCat.make_pretty_labels.html  pyTEMlib.KinsCat.metric_tensor.html  pyTEMlib.KinsCat.plotCBED.html  pyTEMlib.KinsCat.plotHOLZ.html  pyTEMlib.KinsCat.plotKikuchi.html  pyTEMlib.KinsCat.plotSAED.html  pyTEMlib.KinsCat.plot_diffraction_pattern.html  pyTEMlib.KinsCat.plot_unitcell.html  pyTEMlib.KinsCat.plot_unitcell_mayavi.html  pyTEMlib.KinsCat.read_poscar.html  pyTEMlib.KinsCat.ring_pattern_calculation.html  pyTEMlib.KinsCat.vector_norm.html  pyTEMlib.KinsCat.zone_mistilt.html  pyTEMlib.animation.InteractiveAberration.html  pyTEMlib.animation.InteractiveRonchigramMagnification.html  pyTEMlib.animation.add_aperture.html  pyTEMlib.animation.add_lens.html  pyTEMlib.animation.deficient_holz_line.html  pyTEMlib.animation.deficient_kikuchi_line.html  pyTEMlib.animation.geometric_ray_diagram.html  pyTEMlib.animation.html  pyTEMlib.animation.propagate_beam.html  pyTEMlib.atom_tools.atom_refine.html  pyTEMlib.atom_tools.atoms_clustering.html  pyTEMlib.atom_tools.find_atoms.html  pyTEMlib.atom_tools.gauss_difference.html  pyTEMlib.atom_tools.html  pyTEMlib.atom_tools.intensity_area.html  (+373 more)
_modules/: index.html
_sources/: about.rst.txt  contact.rst.txt  index.rst.txt  install.rst.txt
(+1355 files in other folders)
